Cleanup, Eclipse dependencies, better comments and explanations, launch cleanup and all run variants as launch files